first two section done

--- a/index.html
+++ b/index.html
@@ -6,14 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <section class="first-section">
+        <div class="half">
+            <h1>Welcome to</h1>
+            <h1><span class="small-part">MR Masum</span> website</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.</p>
+            <a class="link-button" href="#" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half">
+            <img src="profile/mrmasum2.jpg" alt="">
+        </div>
+    </section>
 
-
-
+    <section class="dream-big">
+        <div class="half">
+            <img src="profile/mrmasum3.jpg" alt="">
+        </div>
+        <div class="half">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" href="#">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 
 </body>
 
