--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <section class="first-section">
+    <section class="first-section section-flex">
         <div class="half">
             <h1>Welcome to</h1>
             <h1><span class="small-part">MR Masum</span> website</h1>
@@ -27,7 +27,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big section-flex">
         <div class="half">
             <img src="profile/mrmasum3.jpg" alt="">
         </div>
@@ -39,6 +39,32 @@
             <a class="link-button" href="#">DOWNLOAD RESUME</a>
         </div>
     </section>
+
+    <section class="experiences">
+        <h1>Experiences</h1>
+        <div class="section-flex">
+            <div id="full-stack" class="half developer-bg">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="small-part">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby-web" class="half developer-bg">
+                <h1>Baby Web Developer</h1>
+                <h3 class="small-part">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <p>&copy; MR Masum 2021, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
